--- a/Bytes/app/src/main/AndroidManifest.xml
+++ b/Bytes/app/src/main/AndroidManifest.xml
@@ -30,8 +30,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:launchMode="singleTask">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".profile.UploadActivity" />
-        <activity android:name=".MainActivity" />
         <activity android:name=".signup.SignupActivity" />
         <activity android:name=".profile.EditProfileActivity" />
         <activity android:name=".profile.HistoryActivity" />
